--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SplashApp"
+        android:theme="@style/Theme.SplashApp.NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".SplashActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_splash"
             android:theme="@style/Theme.SplashApp.NoActionBar">
             <intent-filter>
